change loosing owl pic

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -11,6 +11,7 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/upper_layout"
         android:layout_centerInParent="true"
         android:id="@+id/all_game_btns_view">
 
@@ -161,7 +162,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_layout"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp">
+            android:layout_marginTop="35dp">
 
             <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
                 android:id="@+id/group_choices_of_operators"
@@ -287,8 +288,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ffff"
-        android:visibility="gone"
-
+android:visibility="gone"
         >
 
         <ImageView
