--- a/app/src/main/res/layout/level_cell.xml
+++ b/app/src/main/res/layout/level_cell.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root_layout_level_cell">
+
 
     <Button
         android:id="@+id/level_btn"
@@ -37,5 +40,6 @@
         android:layout_marginBottom="2dp"
         android:layout_centerInParent="true"
         android:background="@drawable/lock" />
+
 
 </RelativeLayout>
