--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -9,11 +9,12 @@
     tools:context=".StartScreenActivity">
 
 
-    <include layout="@layout/app_toolbar"
+    <include
         android:id="@+id/app_bar_start_activity"
-        android:layout_below="@+id/adView"
-        android:layout_height="wrap_content"
+        layout="@layout/app_toolbar"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/adView"
         android:layout_alignParentEnd="true">
 
     </include>
@@ -23,8 +24,8 @@
         android:layout_width="360dp"
         android:layout_height="300dp"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/makeiteven_v2"
-        android:contentDescription="logo"/>
+        android:contentDescription="logo"
+        android:src="@drawable/makeiteven_v2" />
 
     <Button
         android:id="@+id/stage_mode_btn"
@@ -58,10 +59,9 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="10dp"
         android:background="@drawable/setting_btn"
+        android:contentDescription="setting_logo"
         android:src="@drawable/ic_settings_black_24dp"
-        android:visibility="gone"
-        android:contentDescription="setting_logo"/>
-
+        android:visibility="gone" />
 
 
     <Button
@@ -72,48 +72,53 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="25dp"
         android:background="@drawable/tutorial_btn_background"
+        android:text="@string/tutorial"
         android:textAllCaps="false"
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:text="@string/tutorial"/>
+        android:textStyle="bold" />
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/start_activity_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/start_activity_container"
-        android:layout_centerInParent="true">
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:orientation="horizontal">
+
         <ImageButton
             android:id="@+id/scoreBoard_btn"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_alignParentBottom="true"
             android:layout_marginStart="10dp"
             android:background="@color/Transparent"
+            android:contentDescription="scoreBoard icon"
             android:scaleType="fitCenter"
-            android:src="@drawable/score_btn_icon"
-            android:contentDescription="scoreBoard icon"/>
+            android:src="@drawable/score_btn_icon" />
+
+        <android.support.v4.widget.Space
+            android:layout_width="200dp"
+            android:layout_height="wrap_content" />
 
         <ImageButton
             android:id="@+id/shopping_cart_btn"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_alignParentRight="true"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
-            android:layout_alignParentBottom="true"
             android:background="@color/Transparent"
+            android:contentDescription="scoreBoard icon"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_shopping_cart"
-            android:contentDescription="scoreBoard icon"/>
-    </RelativeLayout>
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:src="@drawable/ic_shopping_cart" />
+    </LinearLayout>
+
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         ads:adSize="BANNER"
         ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+
     </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
